objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Livesport Customer Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Being Handled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>On-Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Waiting for Customer</fullName>
        </values>
        <values>
            <fullName>Waiting for Support</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Name_JA__c</fullName>
        <formula>Account.LastName &amp;&quot; &quot; &amp; Account.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name JA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Browser_Information__c</fullName>
        <description>This field is used to capture browser information for the case created from web form.</description>
        <label>Browser Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.Status</field>
                <operation>equals</operation>
                <value>In Progress</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_First_Response_Time__c</fullName>
        <label>Case First Response Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_PTC__c</fullName>
        <description>Shows the difference between case creation date and account creation date in days. If no account was found the result will be shown as &quot;0&quot;.</description>
        <formula>value(IF(ISBLANK( AccountId ),&quot;0&quot;,text(CreatedDate - Account.CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case PTC</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_REF__c</fullName>
        <formula>&quot;ref:_&quot;&amp;LEFT( $Organization.Id,5)&amp;SUBSTITUTE(RIGHT($Organization.Id,10),&quot;0&quot;,&quot;&quot;)&amp;&quot;._&quot;&amp;LEFT(Id,5)&amp;SUBSTITUTE(LEFT(RIGHT(Id,10),5),&quot;0&quot;,&quot;&quot;)&amp;RIGHT(Id,5)&amp;&quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cases REF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_us_email__c</fullName>
        <label>Contact us email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emails_Received__c</fullName>
        <label>Emails Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emails_Sent__c</fullName>
        <label>Emails Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour_DACH__c</fullName>
        <description>Case Open Hour in CET</description>
        <formula>MID ( TEXT ( CreatedDate + 0.0416666+ 0.0416666  ) , 12 , 2 )</formula>
        <label>Hour DACH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsGuestUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks if the user is a guest user or a logged in user.</description>
        <label>IsGuestUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mass_Response__c</fullName>
        <label>Mass Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GAMBA KOFU game error</fullName>
                    <label>GAMBA, EHIME</label>
                </value>
                <value>
                    <fullName>J2 CATCH UP</fullName>
                </value>
                <value>
                    <fullName>Buffering, quality issue</fullName>
                </value>
                <value>
                    <fullName>Issue Compensation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Case_Comment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Case Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Country_Code__c</fullName>
        <label>Notification Country Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Language_Code__c</fullName>
        <label>Notification Language Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Id__c</fullName>
        <formula>IF( Account.Partner_ID__c  &lt;&gt;  null, Account.Partner_ID__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Customer_Comments__c</fullName>
        <label>Previous Customer Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DAZN</fullName>
                </value>
                <value>
                    <fullName>Docomo</fullName>
                </value>
                <value>
                    <fullName>Non-member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_Case_Comments__c</fullName>
        <label>Public Case Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_DACH__c</fullName>
        <formula>IF ( ISPICKVAL (Type, &quot;Live Stream Issue&quot;), 
(LastModifiedDate - NOW()) * 24 + 1, 
(LastModifiedDate - NOW()) * 24 + 6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA DACH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Type_Formula__c</fullName>
        <formula>IF(ISPICKVAL( Sub_Type__c , &apos;&apos;),&apos;&apos;,&apos;-&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>Case sub-types, this field is dependent on case type field.</description>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Device Specific Log in Issue</fullName>
                </value>
                <value>
                    <fullName>Error Message</fullName>
                </value>
                <value>
                    <fullName>Feedback</fullName>
                </value>
                <value>
                    <fullName>Forgotten Password</fullName>
                </value>
                <value>
                    <fullName>Forgotten Username</fullName>
                </value>
                <value>
                    <fullName>Geoblocking Query</fullName>
                </value>
                <value>
                    <fullName>Live Event</fullName>
                </value>
                <value>
                    <fullName>Not Available on Site</fullName>
                </value>
                <value>
                    <fullName>Not loading</fullName>
                </value>
                <value>
                    <fullName>Platform Compatibility Query</fullName>
                </value>
                <value>
                    <fullName>Quality Issue</fullName>
                </value>
                <value>
                    <fullName>Rebill Issue</fullName>
                </value>
                <value>
                    <fullName>Refund Request</fullName>
                </value>
                <value>
                    <fullName>Spinning Circle</fullName>
                </value>
                <value>
                    <fullName>Unable to Sign In</fullName>
                </value>
                <value>
                    <fullName>Unable to Subscribe</fullName>
                </value>
                <value>
                    <fullName>Update Account Settings</fullName>
                </value>
                <value>
                    <fullName>Update Personal Information</fullName>
                </value>
                <value>
                    <fullName>Video not working</fullName>
                </value>
                <value>
                    <fullName>VOD</fullName>
                </value>
                <value>
                    <fullName>Other General Enquiry</fullName>
                </value>
                <value>
                    <fullName>Schedule/Content General Enquiry</fullName>
                </value>
                <value>
                    <fullName>Account, Payments &amp; Billing General Enquiry</fullName>
                </value>
                <value>
                    <fullName>Catch Up General enquiry</fullName>
                </value>
                <value>
                    <fullName>Live Stream General enquiry</fullName>
                </value>
                <value>
                    <fullName>Login General equiry</fullName>
                </value>
                <value>
                    <fullName>PS Beta Feedback</fullName>
                </value>
                <value>
                    <fullName>About DAZN</fullName>
                </value>
                <value>
                    <fullName>Supported country</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_internal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Owner</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>User.Profile.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hourly_report__c</fullName>
        <formula>MID ( TEXT ( CreatedDate + 0.375 ) , 12 , 2 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>hourly report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mail__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>メール平均送受信回数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Add_to_Mass_Email_List</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>Notification_Language_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>Add to Mass Email List</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>CA_Escalated</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Escalated</value>
        </filters>
        <filters>
            <field>Notification_Country_Code__c</field>
            <operation>equals</operation>
            <value>CA</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>New cases Canada</value>
        </filters>
        <label>(CA) Escalated</label>
        <language>en_GB</language>
        <sharedTo>
            <group>CA_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CA_IN_PROGRESS</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Being Handled,In Progress</value>
        </filters>
        <filters>
            <field>Notification_Country_Code__c</field>
            <operation>equals</operation>
            <value>CA</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>New cases Canada</value>
        </filters>
        <label>(CA) In progress / Being handled</label>
        <language>en_GB</language>
        <sharedTo>
            <group>CA_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CA_New_Cases</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.EMAIL</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open,Waiting for Support</value>
        </filters>
        <filters>
            <field>Notification_Country_Code__c</field>
            <operation>equals</operation>
            <value>CA,unknown</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>New cases Canada</value>
        </filters>
        <label>(CA) New Cases</label>
        <language>en_GB</language>
        <sharedTo>
            <group>CA_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CA_ON_HOLD</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>On-Hold</value>
        </filters>
        <filters>
            <field>Notification_Country_Code__c</field>
            <operation>equals</operation>
            <value>CA</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>New cases Canada</value>
        </filters>
        <label>(CA) On Hold</label>
        <language>en_GB</language>
        <sharedTo>
            <group>CA_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DACH_DE</fullName>
        <booleanFilter>1 AND (2 AND 3)</booleanFilter>
        <columns>SLA_DACH__c</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open,Waiting for Support</value>
        </filters>
        <filters>
            <field>Notification_Country_Code__c</field>
            <operation>equals</operation>
            <value>DE,CH,AT,unknown</value>
        </filters>
        <filters>
            <field>Notification_Language_Code__c</field>
            <operation>equals</operation>
            <value>de,unknown,en,en_GB</value>
        </filters>
        <label>(DACH) New Cases - DE</label>
        <language>en_US</language>
        <sharedTo>
            <group>DACH_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DACH_EN</fullName>
        <booleanFilter>1 AND (2 AND 3)</booleanFilter>
        <columns>SLA_DACH__c</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open,Waiting for Support</value>
        </filters>
        <filters>
            <field>Notification_Country_Code__c</field>
            <operation>equals</operation>
            <value>DE,AT,CH,unknown</value>
        </filters>
        <filters>
            <field>Notification_Language_Code__c</field>
            <operation>equals</operation>
            <value>en,en_GB,unknown</value>
        </filters>
        <label>(DACH) New Cases - EN</label>
        <language>en_US</language>
        <sharedTo>
            <group>DACH_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DACH_ESCALATED</fullName>
        <booleanFilter>1 AND 2 and 3</booleanFilter>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Escalated</value>
        </filters>
        <filters>
            <field>Notification_Country_Code__c</field>
            <operation>equals</operation>
            <value>DE,AT,CH,unknown</value>
        </filters>
        <filters>
            <field>Notification_Language_Code__c</field>
            <operation>equals</operation>
            <value>de,en,en_GB,unknown</value>
        </filters>
        <label>(DACH) Escalated</label>
        <language>en_US</language>
        <sharedTo>
            <group>DACH_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DACH_In_Progress</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Being Handled,In Progress</value>
        </filters>
        <filters>
            <field>Notification_Country_Code__c</field>
            <operation>equals</operation>
            <value>DE,CH,AT</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>New Cases DACH</value>
        </filters>
        <label>(DACH) In Progress/Being Handled</label>
        <language>en_US</language>
        <sharedTo>
            <group>DACH_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DACH_On_Hold</fullName>
        <booleanFilter>1 and (2 or 3)</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>On-Hold</value>
        </filters>
        <filters>
            <field>Notification_Country_Code__c</field>
            <operation>equals</operation>
            <value>DE,AT,CH,unknown</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>New Cases DACH</value>
        </filters>
        <label>(DACH) On-Hold</label>
        <language>en_US</language>
        <sharedTo>
            <group>DACH_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Global_All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>(Global) All Cases</label>
        <language>en_GB</language>
        <sharedTo>
            <group>CS_Regional_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JP_Escalated</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Escalated</value>
        </filters>
        <filters>
            <field>Notification_Country_Code__c</field>
            <operation>equals</operation>
            <value>JP</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>New Cases Japan</value>
        </filters>
        <label>(JP) Escalated</label>
        <language>ja</language>
        <sharedTo>
            <group>JP_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JP_ON_HOLD</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>On-Hold</value>
        </filters>
        <filters>
            <field>Notification_Country_Code__c</field>
            <operation>equals</operation>
            <value>JP</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>New Cases Japan</value>
        </filters>
        <label>(JP) On Hold</label>
        <language>ja</language>
        <sharedTo>
            <group>JP_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Sub_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.LAST_UPDATE_DATE_ONLY</field>
            <operation>greaterOrEqual</operation>
            <value>10/17/2017 12:00 AM</value>
        </filters>
        <label>My Cases</label>
        <language>en_GB</language>
        <sharedTo>
            <group>CA_Group</group>
            <group>DACH_Group</group>
            <group>JP_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Escalated,Resolved,Waiting for Customer</value>
        </filters>
        <label>My Open Cases</label>
        <language>en_US</language>
        <sharedTo>
            <group>CA_Group</group>
            <group>DACH_Group</group>
            <group>JP_Group</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>DFD_Customer</fullName>
        <active>true</active>
        <businessProcess>Livesport Customer Support</businessProcess>
        <label>DFD Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Process</fullName>
        <active>true</active>
        <businessProcess>Livesport Customer Support</businessProcess>
        <label>General Process</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Agent_can_assign_case_to_Queue</fullName>
        <active>false</active>
        <description>Agent can assign case to queue only: This validation is deactivated as part of PD-12279 ticket</description>
        <errorConditionFormula>NOT(ISBLANK(Owner:User.Id )) &amp;&amp; ($UserRole.Name = &apos;Customer Services Agent Germany&apos; || $UserRole.Name = &apos;Customer Services Agent Japan&apos;) &amp;&amp; Owner:User.Id &lt;&gt; $User.Id &amp;&amp;  ISCHANGED(OwnerId)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>As a Customer Service Agent, you can only assign cases to Queues and not individual users.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Notification_CountryLanguage_Code</fullName>
        <active>true</active>
        <description>To make sure country and langauge codes are correctly filled</description>
        <errorConditionFormula>AND(OR($Profile.Id = $Setup.CustomerServiceProfileId__c.CustomerServiceTeamMemberProfileId__c,$Profile.Id = $Setup.CustomerServiceProfileId__c.CustomerServiceTeamMemberJapanProfileId__c),NOT(OR( 
AND(Notification_Country_Code__c = &apos;JP&apos;, OR(Notification_Language_Code__c = &apos;ja&apos; , Notification_Language_Code__c = &apos;en&apos;)), 
AND(OR(Notification_Country_Code__c = &apos;DE&apos;, Notification_Country_Code__c = &apos;AT&apos;, Notification_Country_Code__c = &apos;CH&apos;) , 
OR(Notification_Language_Code__c = &apos;de&apos; , Notification_Language_Code__c = &apos;en&apos;)) 
)))</errorConditionFormula>
        <errorMessage>Please enter valid Country and Language Codes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Field</fullName>
        <active>false</active>
        <description>Validation to check all required fields are populated while creating and modifying case.</description>
        <errorConditionFormula>OR(ISBLANK( TRIM( Subject ) ), ISBLANK( TRIM(Description) ) )</errorConditionFormula>
        <errorMessage>Subject and Description must have content.</errorMessage>
    </validationRules>
</CustomObject>